Adjust code to Java 8